# Raytracing

./: .gitignore  ARCHITECTURE.md  BUILD.md  CMakeLists.txt  MIGRATION_SUMMARY.md  PERFORMANCE_PLAN.md  RAYLIB_IMPLEMENTATION.md  README.md  Ray-Casting.pro  main.cpp  main_interactive.cpp  main_interactive_simple.cpp  main_modern.cpp  main_modern_optimized.cpp  main_optimized.cpp  main_simd.cpp  main_simple_perf.cpp  performance_comparison.cpp  raylib_display.cpp  raytracing
appsrc/include/Math/: camera.h  display.h  hittable.h  hittablelist.h  lambertian.h  material.h  modern_sphere.h  modern_vec3.h  performance.h  ray.h  simd_batch.h  sphere.h  vec3.h
appsrc/src/Math/: camera.cpp  display.cpp  hittablelist.cpp  ray.cpp  sphere.cpp  vec3.cpp
